--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,13 @@
                     <!-- Технокряк -->
                     <li class="projects-item"><a class="projects-link" href="">
                         <div class="thumb">
-                            <img class="img-content" src="./image/Технокряк.jpg" alt="Веб-сайт Технокряк" >
+                            <img class="img-content"
+                            srcset="
+                            ./image/projects/techno-crack@2x.jpg 2x,
+                            ./image/projects/techno-crack@3x.jpg 3x,
+                            "  
+                            src="./image/projects/techno-crack.jpg" 
+                            alt="Веб-сайт Технокряк" >
                             <div class="overlay">
                                 <p class="description-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
                             </div>
@@ -76,7 +82,13 @@
                     <!-- Постер New Orlean vs Golden Star -->
                     <li class="projects-item"><a class="projects-link" href="">
                         <div class="thumb">
-                            <img class="img-content" src="./image/Постер_New_Orlean_vs_Golden_Star.jpg" alt="Постер New Orlean vs Golden Star">
+                            <img class="img-content" 
+                            srcset="
+                            ./image/projects/poster_New_Orlean_vs_Golden_Star@2x.jpg 2x,
+                            ./image/projects/poster_New_Orlean_vs_Golden_Star@3x.jpg 3x,
+                            " 
+                            src="./image/projects/poster_New_Orlean_vs_Golden_Star.jpg" 
+                            alt="Постер New Orlean vs Golden Star">
                             <div class="overlay">
                                 <p class="description-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
                             </div>
@@ -90,7 +102,13 @@
                     <!-- Ресторан Seafood -->
                     <li class="projects-item"><a class="projects-link" href="">
                         <div class="thumb">
-                             <img class="img-content" src="./image/Ресторан_Seafood.jpg" alt="Приложение ресторана Seafood">
+                            <img class="img-content"
+                            srcset="
+                            ./image/projects/restaurant_seafood@2x.jpg 2x,
+                            ./image/projects/restaurant_seafood@3x.jpg 3x,
+                            " 
+                            src="./image/projects/restaurant_seafood.jpg" 
+                            alt="Приложение ресторана Seafood">
                             <div class="overlay">
                                 <p class="description-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
                             </div>
@@ -104,7 +122,13 @@
                     <!-- Проект Prime -->
                     <li class="projects-item"><a class="projects-link" href="">
                         <div class="thumb">
-                            <img class="img-content" src="./image/Проект_Prime.jpg" alt="Проект Prime">
+                            <img class="img-content"
+                            srcset="
+                            ./image/projects/project_prime@2x.jpg 2x,
+                            ./image/projects/project_prime@3x.jpg 3x,
+                            " 
+                            src="./image/projects/project_prime.jpg" 
+                            alt="Проект Prime">
                             <div class="overlay">
                                 <p class="description-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
                             </div>
@@ -118,7 +142,13 @@
                     <!-- Проект Boxes -->
                     <li class="projects-item"><a class="projects-link" href="">
                         <div class="thumb">
-                            <img class="img-content" src="./image/Проект_Boxes.jpg" alt="Проект Boxes">
+                            <img class="img-content"
+                            srcset="
+                            ./image/projects/project_boxes@2x.jpg 2x,
+                            ./image/projects/project_boxes@3x.jpg 3x,
+                            " 
+                            src="./image/projects/project_boxes.jpg" 
+                            alt="Проект Boxes">
                             <div class="overlay">
                                 <p class="description-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
                             </div>
@@ -133,12 +163,17 @@
                     <!-- Inspiration has no Borders -->
                     <li class="projects-item"><a class="projects-link" href="">
                         <div class="thumb">
-                            <img class="img-content" src="./image/Inspiration_no_Border.jpg" alt="Веб-сайт Inspiration has no Borders">
+                            <img class="img-content" 
+                            srcset="
+                            ./image/projects/inspiration_has_no_borders@2x.jpg 2x,
+                            ./image/projects/inspiration_has_no_borders@3x.jpg 3x,
+                            " 
+                            src="./image/projects/inspiration_has_no_borders.jpg" 
+                            alt="Веб-сайт Inspiration has no Borders">
                             <div class="overlay">
                                 <p class="description-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
                             </div>
                         </div> 
-                        
                         <div class="list-content">
                             <h2 class="our-projects-title">Inspiration has no Borders</h2>
                             <p class="our-projects-cat">Веб-сайт</p>   
@@ -148,7 +183,13 @@
                      <!-- Издание Limited Edition -->
                     <li class="projects-item"><a class="projects-link" href="">
                         <div class="thumb">
-                            <img class="img-content" src="./image/Издание_Limited_Edition.jpg" alt="Издание Limited Edition">
+                            <img class="img-content" 
+                            srcset="
+                            ./image/projects/limited_edition@2x.jpg 2x,
+                            ./image/projects/limited_edition@3x.jpg 3x,
+                            "
+                            src="./image/projects/limited_edition.jpg" 
+                            alt="Издание Limited Edition">
                             <div class="overlay">
                                 <p class="description-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
                             </div>
@@ -162,7 +203,13 @@
                     <!-- Проект LAB -->
                     <li class="projects-item"><a class="projects-link" href="">
                         <div class="thumb">
-                            <img class="img-content" src="./image/Проект_LAB.jpg" alt="Проект LAB">
+                            <img class="img-content"
+                            srcset="
+                            ./image/projects/project_lab@2x.jpg 2x,
+                            ./image/projects/project_lab@3x.jpg 3x,
+                            "
+                            src="./image/projects/project_lab.jpg" 
+                            alt="Проект LAB">
                             <div class="overlay">
                                 <p class="description-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
                             </div>
@@ -177,7 +224,13 @@
                      <!-- Inspiration has no Borders -->
                     <li class="projects-item"><a class="projects-link" href="">
                         <div class="thumb">
-                            <img class="img-content" src="./image/Growing_Business.jpg" alt="Приложение Growing Business">
+                            <img class="img-content"
+                            srcset="
+                            ./image/projects/growing_business@2x.jpg 2x,
+                            ./image/projects/growing_business@3x.jpg 3x,
+                            "
+                            src="./image/projects/growing_business.jpg" 
+                            alt="Приложение Growing Business">
                             <div class="overlay">
                                 <p class="description-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
                             </div>
