--- a/index.html
+++ b/index.html
@@ -95,17 +95,38 @@
             <div class="container work-exemple">
               <h2 class="section-title">Чем мы занимаемся</h2>        
                 <ul class="work-exemple-list">
-                <li class="work-exemple-item"><a class="work-exemple-link" href="#"><img src="./image/box1.jpg" alt="Десктопные приложения">
-                <div class="work-exemple-text"> 
-                    <p class="text">Десктопные приложения</p>
-                </div>
+                <li class="work-exemple-item"><a class="work-exemple-link" href="#">
+                    <img 
+                    srcset="
+                            ./image/work-exemple/box1@2x.jpg 2x,
+                            ./image/work-exemple/box1@3x.jpg 3x,
+                        "  
+                    src="./image/work-exemple/box1.jpg" 
+                    alt="Десктопные приложения">
+                    <div class="work-exemple-text"> 
+                        <p class="text">Десктопные приложения</p>
+                    </div>
                 </a></li>
-                <li class="work-exemple-item"><a class="work-exemple-link" href="#"><img src="./image/box2.jpg" alt="Мобильные приложения">
-                <div class="work-exemple-text"> 
-                    <p class="text">Мобильные приложения</p>
-                </div>
+                <li class="work-exemple-item"><a class="work-exemple-link" href="#">
+                    <img 
+                    srcset="
+                            ./image/work-exemple/box2@2x.jpg 2x,
+                            ./image/work-exemple/box2@3x.jpg 3x,
+                        "  
+                    src="./image/work-exemple/box2.jpg"
+                    alt="Мобильные приложения">
+                    <div class="work-exemple-text"> 
+                        <p class="text">Мобильные приложения</p>
+                    </div>
                 </a></li>
-                <li class="work-exemple-item"><a class="work-exemple-link" href="#"><img src="./image/box3.jpg" alt="Дизайнерские решения">
+                <li class="work-exemple-item"><a class="work-exemple-link" href="#">
+                    <img
+                    srcset="
+                            ./image/work-exemple/box3@2x.jpg 2x,
+                            ./image/work-exemple/box3@3x.jpg 3x,
+                        "  
+                    src="./image/work-exemple/box3.jpg"
+                    alt="Дизайнерские решения">
                 <div class="work-exemple-text"> 
                     <p class="text">Дизайнерские решения</p>  
                 </div>
@@ -120,7 +141,14 @@
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team-list">
                     <li class="team-item">
-                        <img src="./image/Демьяненко.jpg" alt="Игорь Демьяненко" class="worker-img">
+                        <img 
+                        srcset="
+                            ./image/team/Demyanenko@2x.jpg 2x,
+                            ./image/team/Demyanenko@3x.jpg 3x,
+                        "
+                        src="./image/team/Demyanenko.jpg" 
+                        alt="Игорь Демьяненко" 
+                        class="worker-img">
                         <div class="team-text">
                             <p class="worker-name"><b>Игорь Демьяненко</b></p>
                             <p class="worker-profession">Product Designer</p>
@@ -157,7 +185,14 @@
                         </div>
                     </li>
                     <li class="team-item">
-                        <img src="./image/Репина.jpg" alt="Ольга Репина" class="worker-img">
+                        <img 
+                        srcset="
+                            ./image/team/Repina@2x.jpg 2x,
+                            ./image/team/Repina@3x.jpg 3x,
+                        "
+                        src="./image/team/Repina.jpg" 
+                        alt="Ольга Репина" 
+                        class="worker-img">
                         <div class="team-text">
                             <p class="worker-name"><b>Ольга Репина</b></p>
                             <p class="worker-profession">Frontend Developer</p>
@@ -201,7 +236,14 @@
                         </div>
                     </li>
                     <li class="team-item">
-                        <img src="./image/Тарасов.jpg" alt="Николай Тарасов" class="worker-img">
+                        <img 
+                        srcset="
+                            ./image/team/Tarasov@2x.jpg 2x,
+                            ./image/team/Tarasov@3x.jpg 3x,
+                        "
+                        src="./image/team/Tarasov.jpg" 
+                        alt="Николай Тарасов" 
+                        class="worker-img">
                         <div class="team-text">
                             <p class="worker-name"><b>Николай Тарасов</b></p>
                             <p class="worker-profession">Marketing</p>
@@ -246,7 +288,14 @@
                         
                     </li>
                     <li class="team-item">
-                        <img src="./image/Ермаков.jpg" alt="Михаил Ермаков" class="worker-img">
+                        <img
+                        srcset="
+                            ./image/team/Ermakov@2x.jpg 2x,
+                            ./image/team/Ermakov@3x.jpg 3x,
+                        " 
+                        src="./image/team/Ermakov.jpg" 
+                        alt="Михаил Ермаков" 
+                        class="worker-img">
                         <div class="team-text">
                             <p class="worker-name"><b>Михаил Ермаков</b></p>
                             <p class="worker-profession">UI Designer</p>
